Changelog for Miosix np embedded OS

- Added SDRAM initialization code for stm32f429 board, and SDRAM linker
  scripts. The new default is to put .data/.bss/stack and heap in the SDRAM,
  and to leave the upper 2MB of it for the LCD.
- Cleaned up code completion configuration for Netbeans. Now the IDE
  automatically detects the source files that belong to the project by looking 
  at the debug symbols in the produced elf file. 
- Added memory barrier to saveContext() to prevent a race condition found in
  the new stm32f429 board.
- Now Makefile.inc has no predefined board. This has been done in order to
  avoid mistakenly compiling for the wrong board.
- Fixed bug in testsuite: it failed compiling with exceptions disabled due
  to RTTI dependence.
- Fixed a bug in Thread::create() causing a crash when the heap is full.
- Changed PROGRAM_CMDLINE for stm32vldiscovery from vsprog to stm32flash
- Unified the CMSIS directories in the various subdirectories of arch into
  one CMSIS, in order to reduce the amount of code duplication and to avoid
  having to deal with subtle incompatibilities between different CMSIS versions
- Added support for stm32f2xx and specifically the new stm32f4discovery with
  an LCD display.
- After so many changes and improvements, officially releasing Miosix 2.0beta1
v2.0beta1
- Upgraded compiler build scripts to build a redistributable Miosix Toolchain
  for both Linux and Windows
- Changed makefile: moved from bash for loops to GNU Make for loops to avoid
  a bash dependence that makes it difficult to build Miosix under windows
- Added servomotor driving library for stm32f4discovery and stm32vldiscovery
- Modified BSPs to instantiate the new classes
- Changed basicFilesystemSetup() to take a pointer to a device to mount as /sd
- Added SD drivers for stm32 and lpc2000 to miosix/common/drivers, adapted to
  the Device interface
- Fixed bug in the testsuite that was causing a file to be opened for reading