@@ -66,6 +66,7 @@ int main()
     {
         FastInterruptDisableLock dLock;
         RCC->APB1ENR |= RCC_APB1ENR_TIM3EN;
+        RCC_SYNC();
     }
     TIM3->CNT=0;
     TIM3->PSC=84-1; //Prescaler clocked at 84MHz, timer incremented every 1us
