@@ -6,4 +6,6 @@
 #include "CMSIS/Include/core_cm3.h"
 #include "CMSIS/Device/ST/STM32L1xx/Include/system_stm32l1xx.h"
 
+#define RCC_SYNC() //Workaround for a bug in stm32f42x
+
 #endif	//ARCH_REGISTERS_IMPL_H
