@@ -8,4 +8,6 @@
 #include "CMSIS/Include/core_cm4.h"
 #include "CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h"
 
+#define RCC_SYNC() __DSB() //Workaround for a bug in stm32f42x
+
 #endif	//ARCH_REGISTERS_IMPL_H
